fix credits spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -107,7 +107,7 @@ a:active {
 
 #footer {
     position: fixed;
-    bottom: 10px;
+    bottom: 0px;
     left: 10px;
     font-size: 8pt;
     line-height: 9pt;
@@ -201,6 +201,7 @@ a:active {
 
 .block {
     padding-right: 5px;
+    padding-bottom: 9pt;
     display: inline-block;
 }
 
